--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^6.7.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.2",
     "nodemon": "^2.0.21"
   }
